--- a/index.html
+++ b/index.html
@@ -19,18 +19,21 @@
                             <div><button class="buttons">Contacts</button></div>
                     </div>
                     </div>
-                    <div  class="header-middle">
-                        <div>
-                            <h3 class="home">Home</h3>
-                        </div>
-                        <div>
-                            <h3 class="about">About</h3>
-                        </div>
-                        <div>
-                            <h3 class="facilities">Facilities</h3>
-                        </div>
-                        <div>
-                            <h3 class="admission">Admission</h3>
+                    <br>
+                    <div>
+                        <div  class="header-middle">
+                            <div>
+                                <h3 class="home">Home</h3>
+                            </div>
+                            <div>
+                                <h3 class="about">About</h3>
+                            </div>
+                            <div>
+                                <h3 class="facilities">Facilities</h3>
+                            </div>
+                            <div>
+                                <h3 class="admission">Admission</h3>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -42,7 +45,7 @@
             <div class="section-one-first-section">
                 <div class="header-one">
                     <div class="header-one-div-one">
-                        <h1 class="header-one-child-h">Empowering students from small age towards vision</h1>
+                        <h1 class="header-one-child-h"><span class="empowering">Empowering</span> students from small age <span class="towards vision">towards vision</span></h1>
                         <p class="header-one-child-p">With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
                         <button class="header-one-child-buttons">Enroll Now</button>
                     </div>
