responsive website repository

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                     <div class="header-one-div-one">
                         <h1 class="header-one-child-h"><span class="empowering">Empowering</span> students from small age <span class="towards vision">towards vision</span></h1>
                         <p class="header-one-child-p">With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
-                        <button class="header-one-child-buttons">Enroll Now</button>
+                        <div class="header-one-child-div-buttons"><button class="header-one-child-buttons">Enroll Now</button></div>
                     </div>
-                    <div class="header-one-child-img">
-                        <img src="hero-kids.png" alt="">
+                    <div class="header-one-child-div-img">
+                        <img class="header-one-child-img" src="hero-kids.png" alt="">
                     </div>
                 </div>
             </div>
