responsive website repository

--- a/index.html
+++ b/index.html
@@ -55,39 +55,41 @@
             </div>
         </section>
         <section>
-                <div class="header-two">
-                    <h1 class="header-two-child-h">Standard Curriculum</h1>
-                </div>
-                <div class="header-two-card">
-                    <div class="card-one">
-                        <img class="card-one-img" src="kinder.png" alt="">
-                        <h3 class="card-one-h">Kinder (3-6) Years</h3>
-                        <p class="card-one-p">Cum sociis natoque penatibus et magnis
-                            dis parturient montes, nascetur ridiculus
-                            mu sdis parturient</p>
-                        <button class="card-one-button">Read More</button>
+                <div>
+                    <div class="header-two">
+                        <h1 class="header-two-child-h">Standard Curriculum</h1>
                     </div>
-                    <div class="card-two">
-                        <img class="card-one-img" src="elementary.png" alt="">
-                        <h3 class="card-one-h">Elementary School</h3>
-                        <p class="card-one-p">Cum sociis natoque penatibus et magnis
-                            dis parturient montes, nascetur ridiculus
-                            mu sdis parturient</p>
-                        <button class="card-two-button">Read More</button>
-                    </div>
-                    <div class="card-three">
-                        <img class="card-one-img" src="middle.png" alt="">
-                        <h3 class="card-one-h">Middle (10-16) Years</h3>
-                        <p class="card-one-p">Cum sociis natoque penatibus et magnis
-                            dis parturient montes, nascetur ridiculus
-                            mu sdis parturient</p>
-                        <button class="card-three-button">Read More</button>
+                    <div class="header-two-card">
+                        <div class="card-one">
+                            <img class="card-one-img" src="kinder.png" alt="">
+                            <h3 class="card-one-h">Kinder (3-6) Years</h3>
+                            <p class="card-one-p">Cum sociis natoque penatibus et magnis
+                                dis parturient montes, nascetur ridiculus
+                                mu sdis parturient</p>
+                            <button class="card-one-button">Read More</button>
+                        </div>
+                        <div class="card-two">
+                            <img class="card-one-img" src="elementary.png" alt="">
+                            <h3 class="card-one-h">Elementary School</h3>
+                            <p class="card-one-p">Cum sociis natoque penatibus et magnis
+                                dis parturient montes, nascetur ridiculus
+                                mu sdis parturient</p>
+                            <button class="card-two-button">Read More</button>
+                        </div>
+                        <div class="card-three">
+                            <img class="card-one-img" src="middle.png" alt="">
+                            <h3 class="card-one-h">Middle (10-16) Years</h3>
+                            <p class="card-one-p">Cum sociis natoque penatibus et magnis
+                                dis parturient montes, nascetur ridiculus
+                                mu sdis parturient</p>
+                            <button class="card-three-button">Read More</button>
+                        </div>
                     </div>
                 </div>
-                <div class="angle">
-                    <div class="left-angle">&#x2329; </div> &nbsp; &nbsp;
-                    <div class="right-angle">&#x232A;</div>
-                </div>
+                    <div class="angle">
+                        <div class="left-angle">&#x2329; </div> &nbsp; &nbsp;
+                        <div class="right-angle">&#x232A;</div>
+                    </div>
         </section>
         <section  class="back-ground">
             <h1 class="our-stories">Our Stories</h1>
