--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                         <div class="school-family">Admission</div>
                     </div>
                     <div class="keep-educaton">
-                        <div>
+                        <div class="keep">
                             <h3 class="keep">Keep In Touch</h3></div>
                         <div class="keep-divs">
                             <div class="imgs"><img class="imgs" src="fb.png" alt=""></div>
